# fever_gl

./: .clang-format  .gitignore  CMakeLists.txt
src/: main.cc
src/gl/: opengl.cc  opengl.h
src/ogl/: opengl.cc  opengl.h
src/panic/: gl.h
src/util/: file.cc  file.h
